kube/preference/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: preference
    version: v1
    app.kubernetes.io/part-of: Preference
  name: preference-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preference
      version: v1
  template:
    metadata:
      labels:
        app: preference
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:      
        - name: JAVA_OPTIONS
          value: -Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n
        image: quay.io/rhdevelopers/istio-tutorial-preference:latest
#        image: docker.io/mhildema/preference:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        # livenessProbe:
        #   exec:
        #     command:
        #     - curl
        #     - localhost:8080/health          
        #   initialDelaySeconds: 3
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        name: preference
        # readinessProbe:
        #   exec:
        #     command:
        #     - curl
        #     - localhost:8080/health          
        #   initialDelaySeconds: 3
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        securityContext:
          privileged: false
      serviceAccountName: preference
