kube/preference/destination-rule-preference.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: preference
spec:
  host: preference
  subsets:
  - labels:
      version: v1
    name: version-v1
#  - labels:
#      version: v2
#    name: version-v2
---
